--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   logging: ^1.0.2
   google_fonts: ^3.0.1
   device_preview: ^1.1.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
