--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   google_fonts: ^3.0.1
   device_preview: ^1.1.0
   permission_handler: ^10.0.0
+  lottie: ^1.4.3
+  bot_toast: ^4.0.3
+  rate_my_app: ^1.1.3
+  flutter_local_notifications: ^11.0.1
+  flutter_svg: ^1.1.5
+  timezone: ^0.9.0
 
 dev_dependencies:
   flutter_test:
