--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=2.17.1 <3.3.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -48,13 +48,20 @@ dependencies:
   google_fonts: ^3.0.1
   device_preview: ^1.1.0
   permission_handler: ^10.0.0
-  lottie: ^1.4.3
+  flutter_svg: ^1.1.4
+  lottie: ^1.4.1
+  flutter_rating_bar: ^4.0.1
+  firebase_auth: ^3.7.0
+  firebase_core: ^1.21.1
+  cloud_firestore: ^3.4.6
   bot_toast: ^4.0.3
+  google_sign_in: ^5.4.1
+  flutter_local_notifications: ^11.0.0
+  introduction_screen: ^3.0.2
   rate_my_app: ^1.1.3
-  flutter_local_notifications: ^11.0.1
-  flutter_svg: ^1.1.5
   timezone: ^0.9.0
-  font_awesome_flutter: ^10.2.1
+  get_it: ^7.2.0
+  # flutter_secure_storage: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -79,9 +86,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svg/
+    - assets/png/
+    - assets/lotties/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
